
wxMSW: Fixed erroneous selection of content in wx.ComboBox when within
a wx.StaticBox.

wxMSW: Fixed alpha blitting to take into account source position.

Ensure that Python is still in an initialized state before doing any
locking or unlocking in wxPyBeginBlockThreads and wxPyEndBlockThreads
as these can be triggered after Python has been finalized in embedding
situations.





2.6.0.0
-------
* 26-Apr-2005

wxMSW: Fixed wx.TransientPopupWindow (and therefore wx.TipWindow) to
auto-dismiss when the mouse is clicked outside of the popup like it is
supposed to.

wxMSW: Fixed bug #1167891 wx.Notebook display problem with wx.NB_MULTILINE.

wxMSW: Fixed bad cliping of hidden windows inside of wx.StaticBox.

wxGTK:  The configure flags for selecting GTK+ 1.2.x or 2.x has
changed slightly.  It is now --with-gtk[=VERSION] where VERSION is
either '1', '2' or 'any'.  The default is '2'.

wx.stc.StyledTextCtrl: Added the following methods for alternate ways
to set and fetch text from the document buffer.  They work similarly
to the existing methods of the same name, except that they don't go
through the same string/unicode <--> wxString conversions.  The "Raw"
methods will do no conversions at all and in a unicode build of
wxPython the strings will be in the utf-8 encoding and in an ansi
build no assumption is made about the encoding.  The "UTF8" functions
will attempt to always get/set utf-8 text, which it will always be
able to do in a unicode build, and in an ansi build it will depend on
the content of the utf-8 used being compatible with the current
encoding, (you'll get an exception otherwise.)

      ===================  ====================
      AddTextRaw           AddTextUTF8
      InsertTextRaw        InsertTextUTF8
      GetCurLineRaw        GetCurLineUTF8
      GetLineRaw           GetLineUTF8
      GetSelectedTextRaw   GetSelectedTextUTF8
      GetTextRangeRaw      GetTextRangeUTF8
      SetTextRaw           SetTextUTF8
      GetTextRaw           GetTextUTF8